Lib/AlternateWrapper/NaroOccCore/NaroOccCore-build-desktop/Occ/V3d/V3dViewer.cs

		public AspectGrid Grid{
			get {
				return new AspectGrid(V3d_Viewer_Grid(Instance));
			}
		}
		public AspectGridType GridType{
			get {
				return (AspectGridType)V3d_Viewer_GridType(Instance);
			}
		}
		public AspectGridDrawMode GridDrawMode{
			get {
				return (AspectGridDrawMode)V3d_Viewer_GridDrawMode(Instance);
			}
		}
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_Ctor36F0AB5(IntPtr Device,string aName,string aDomain,double ViewSize,int ViewProj,int ViewBackground,int Visualization,int ShadingModel,int UpdateMode,bool ComputedMode,bool DefaultComputedMode,int SurfaceDetail);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetViewOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetViewOn36A6FAB7(IntPtr instance, IntPtr View);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetViewOff(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetViewOff36A6FAB7(IntPtr instance, IntPtr View);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_Update(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_UpdateLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_Redraw(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_Remove(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_Erase(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_UnHighlight(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultBackgroundColor638950E1(IntPtr instance, int Type,double V1,double V2,double V3);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultBackgroundColor48F4F471(IntPtr instance, int Name);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultBackgroundColor8FD7F48(IntPtr instance, IntPtr Color);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultBgGradientColors99C5FF9E(IntPtr instance, int Name1,int Name2,int FillStyle);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultBgGradientColorsEE919A89(IntPtr instance, IntPtr Color1,IntPtr Color2,int FillStyle);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_DisplayPrivilegedPlane15F3D2D4(IntPtr instance, bool OnOff,double aSize);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetLightOn1C16FAC6(IntPtr instance, IntPtr MyLight);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetLightOn(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetLightOff1C16FAC6(IntPtr instance, IntPtr MyLight);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetLightOff(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_DelLight1C16FAC6(IntPtr instance, IntPtr MyLight);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_ClearCurrentSelectedLight(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_DefaultBackgroundColor638950E1(IntPtr instance, int Type,ref double V1,ref double V2,ref double V3);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_DefaultBackgroundColor(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_DefaultBgGradientColorsCF0F9433(IntPtr instance, IntPtr Color1,IntPtr Color2);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_InitActiveViews(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_NextActiveViews(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_InitDefinedViews(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_NextDefinedViews(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_InitActiveLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_NextActiveLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_InitDefinedLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_NextDefinedLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_AddPlane20B19CEF(IntPtr instance, IntPtr MyPlane);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_DelPlane20B19CEF(IntPtr instance, IntPtr MyPlane);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_InitDefinedPlanes(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_NextDefinedPlanes(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_IsGlobalLight1C16FAC6(IntPtr instance, IntPtr TheLight);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_ActivateGridBD34C5A5(IntPtr instance, int aGridType,int aGridDrawMode);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_DeactivateGrid(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_GridEcho(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_RectangularGridValues216AF150(IntPtr instance, ref double XOrigin,ref double YOrigin,ref double XStep,ref double YStep,ref double RotationAngle);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetRectangularGridValues216AF150(IntPtr instance, double XOrigin,double YOrigin,double XStep,double YStep,double RotationAngle);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_CircularGridValuesFC0B193D(IntPtr instance, ref double XOrigin,ref double YOrigin,ref double RadiusStep,ref int DivisionNumber,ref double RotationAngle);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetCircularGridValuesFC0B193D(IntPtr instance, double XOrigin,double YOrigin,double RadiusStep,int DivisionNumber,double RotationAngle);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_CircularGridGraphicValues9F0E714F(IntPtr instance, ref double Radius,ref double OffSet);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetCircularGridGraphicValues9F0E714F(IntPtr instance, double Radius,double OffSet);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_RectangularGridGraphicValues9282A951(IntPtr instance, ref double XSize,ref double YSize,ref double OffSet);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetRectangularGridGraphicValues9282A951(IntPtr instance, double XSize,double YSize,double OffSet);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_Init(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_AddZLayerE8219145(IntPtr instance, ref int theLayerId);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_RemoveZLayerE8219145(IntPtr instance, int theLayerId);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_GetAllZLayersE22FA26(IntPtr instance, IntPtr theLayerSeq);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_CreateView(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_DefaultOrthographicView(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_DefaultPerspectiveView(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetZBufferManagment(IntPtr instance, bool value);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_ZBufferManagment(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultTypeOfView(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetPrivilegedPlane(IntPtr instance, IntPtr value);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_PrivilegedPlane(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultViewSize(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern double V3d_Viewer_DefaultViewSize(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultViewProj(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_Viewer_DefaultViewProj(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultVisualization(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_Viewer_DefaultVisualization(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultShadingModel(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_Viewer_DefaultShadingModel(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultSurfaceDetail(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_Viewer_DefaultSurfaceDetail(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetDefaultAngle(IntPtr instance, double value);
		[DllImport("NaroOccCore.dll")]
		private static extern double V3d_Viewer_DefaultAngle(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetUpdateMode(IntPtr instance, int value);
		[DllImport("NaroOccCore.dll")]
		private static extern int V3d_Viewer_UpdateMode(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_IfMoreViews(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_MoreActiveViews(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_ActiveView(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_LastActiveView(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_MoreDefinedViews(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_DefinedView(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_MoreActiveLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_ActiveLight(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_MoreDefinedLights(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_DefinedLight(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_MoreDefinedPlanes(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_DefinedPlane(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_Viewer(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern void V3d_Viewer_SetCurrentSelectedLight(IntPtr instance, IntPtr value);
		[DllImport("NaroOccCore.dll")]
		private static extern IntPtr V3d_Viewer_CurrentSelectedLight(IntPtr instance);
		[DllImport("NaroOccCore.dll")]
		private static extern bool V3d_Viewer_ComputedMode(IntPtr instance);
